Issue #SB-14244 fix: vertical alignment fix for 'sort-by' button text.

--- a/src/app/resources/explore-books/explore-books.page.scss
+++ b/src/app/resources/explore-books/explore-books.page.scss
@@ -79,8 +79,8 @@
   .sort-by {
     border-radius: 4px;
     --background: #024f9d;
-    padding: 0 2rem 0 2rem !important;
-    margin-bottom: 1rem;
+    padding: 0 2rem 5px 2rem !important;
+    margin-bottom: 0.2rem;
     height: 45px;
   }
   .spinner-container {
